--- a/NativeSpark/src/main/resources/templates/project-details.html
+++ b/NativeSpark/src/main/resources/templates/project-details.html
@@ -109,6 +109,7 @@
                         <li sec:authorize="hasAnyAuthority('ROLE_BUSINESS', 'ROLE_ENTREPRENEUR')">
                             <a class="dropdown-item" th:href="@{/my_postings}">My Postings</a>
                         </li>
+                        <li><a class="dropdown-item" th:href="@{/saved}">Saved</a></li>
                         <li><a class="dropdown-item" href="#">Coming Soon...</a></li>
                     </ul>
                 </li>
