--- a/NativeSpark/src/main/resources/templates/logout_conf.html
+++ b/NativeSpark/src/main/resources/templates/logout_conf.html
@@ -87,17 +87,6 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-<!--            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">-->
-<!--                <li class="nav-item"><a class="nav-link" th:href="@{/about}">About Us</a></li>-->
-<!--                <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>-->
-<!--                <li class="nav-item"><a class="nav-link" th:href="@{/account}">My Account</a></li>-->
-<!--                <li class="nav-item" sec:authorize="!isAuthenticated()">-->
-<!--                    <a class="nav-link" th:href="@{/login}">Login</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item" sec:authorize="isAuthenticated()">-->
-<!--                    <a class="nav-link" href="#" id="logoutLink">Logout</a>-->
-<!--                </li>-->
-<!--            </ul>-->
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" th:href="@{/about}">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>
@@ -116,6 +105,7 @@
                         <li th:if="${#authentication.authorities.?[authority == 'ROLE_BUSINESS' or authority == 'ROLE_ENTREPRENEUR'].size() > 0}">
                             <a class="dropdown-item" th:href="@{/my_postings}">My Postings</a>
                         </li>
+                        <li><a class="dropdown-item" th:href="@{/saved}">Saved</a></li>
                         <li><a class="dropdown-item" href="#">Coming Soon...</a></li> <!-- Placeholder for future features -->
                     </ul>
                 </li>
