--- a/NativeSpark/src/main/resources/templates/product-posting-form.html
+++ b/NativeSpark/src/main/resources/templates/product-posting-form.html
@@ -74,6 +74,7 @@
                         <li th:if="${#authentication.authorities.?[authority == 'ROLE_ENTREPRENEUR'].size() > 0}">
                             <a class="dropdown-item" th:href="@{/my_postings}">My Products</a>
                         </li>
+                        <li><a class="dropdown-item" th:href="@{/saved}">Saved</a></li>
                         <li><a class="dropdown-item" href="#">Coming Soon...</a></li> <!-- Placeholder for future features -->
                     </ul>
                 </li>
