--- a/NativeSpark/src/main/resources/templates/select-user-type.html
+++ b/NativeSpark/src/main/resources/templates/select-user-type.html
@@ -116,6 +116,7 @@
                         <li th:if="${#authentication.authorities.?[authority == 'ROLE_BUSINESS' or authority == 'ROLE_ENTREPRENEUR'].size() > 0}">
                             <a class="dropdown-item" th:href="@{/my_postings}">My Postings</a>
                         </li>
+                        <li><a class="dropdown-item" th:href="@{/saved}">Saved</a></li>
                         <li><a class="dropdown-item" href="#">Coming Soon...</a></li> <!-- Placeholder for future features -->
                     </ul>
                 </li>
