--- a/NativeSpark/src/main/resources/templates/product-details.html
+++ b/NativeSpark/src/main/resources/templates/product-details.html
@@ -228,7 +228,7 @@
         }
 
         .product-info {
-            width: 50%;
+            width: 60%;
         }
 
         .btn-dark-green {
@@ -266,6 +266,9 @@
                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
                         <li><a class="dropdown-item" th:href="@{/subscription}">Subscription</a></li>
                         <li><a class="dropdown-item" th:href="@{/my_orders}">My Orders</a></li>
+                        <li sec:authorize="hasAuthority('ROLE_ENTREPRENEUR')">
+                            <a class="dropdown-item" th:href="@{/buyers}">Buyers of My Products</a>
+                        </li>
                         <li sec:authorize="hasAnyAuthority('ROLE_BUSINESS', 'ROLE_ENTREPRENEUR')">
                             <a class="dropdown-item" th:href="@{/my_postings}">My Postings</a>
                         </li>
