--- a/NativeSpark/src/main/resources/templates/home.html
+++ b/NativeSpark/src/main/resources/templates/home.html
@@ -101,7 +101,7 @@
                         <li><a class="dropdown-item" href="#">Coming Soon...</a></li>
                     </ul>
                 </li>
-
+                <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link" th:href="@{/cart}">Cart</a></li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()"><a class="nav-link" th:href="@{/login}">Login</a></li>
                 <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link" th:href="@{/logout}">Logout</a></li>
             </ul>
