--- a/NativeSpark/src/main/resources/templates/purchase.html
+++ b/NativeSpark/src/main/resources/templates/purchase.html
@@ -60,44 +60,9 @@
 </head>
 <body>
 
-<!-- ✅ Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">NativeSpark</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" th:href="@{/about}">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>
-                <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link" th:href="@{/account}">My Account</a></li>
 
-                <!-- Dropdown Menu -->
-                <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
-                    <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown">
-                        Services
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-                        <li><a class="dropdown-item" th:href="@{/subscription}">Subscription</a></li>
-                        <li><a class="dropdown-item" th:href="@{/my_orders}">My Orders</a></li>
-                        <li sec:authorize="hasAuthority('ROLE_ENTREPRENEUR')">
-                            <a class="dropdown-item" th:href="@{/buyers}">Buyers of My Products</a>
-                        </li>
-                        <li sec:authorize="hasAnyAuthority('ROLE_BUSINESS', 'ROLE_ENTREPRENEUR')">
-                            <a class="dropdown-item" th:href="@{/my_postings}">My Postings</a>
-                        </li>
-                        <li><a class="dropdown-item" th:href="@{/saved}">Saved</a></li>
-                        <li><a class="dropdown-item" href="#">Coming Soon...</a></li>
-                    </ul>
-                </li>
-
-                <li class="nav-item" sec:authorize="!isAuthenticated()"><a class="nav-link" th:href="@{/login}">Login</a></li>
-                <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link" th:href="@{/logout}">Logout</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<!-- ✅ Navbar Container -->
+<div th:replace="~{navbar}"></div>
 
 <!-- ✅ Purchase Container -->
 <div class="container">
