cart summary page

--- a/NativeSpark/src/main/resources/templates/cart.html
+++ b/NativeSpark/src/main/resources/templates/cart.html
@@ -58,7 +58,7 @@
             </tbody>
         </table>
         <div>
-
+            <a class="button" th:href="@{/cart/summary}">Checkout</a>
         </div>
     </div>
 
