--- a/NativeSpark/src/main/resources/templates/cart-summary.html
+++ b/NativeSpark/src/main/resources/templates/cart-summary.html
@@ -87,7 +87,7 @@
                                     <p>$<span th:text="${totalPrice}"></span></p>
                                 </div>
                                 <div class="text-center">
-                                    <a href="/checkout" class="btn btn-dark-green">Proceed to Checkout</a>
+                                    <a th:href="@{/cart/checkout}" class="btn btn-dark-green">Proceed to Checkout</a>
                                 </div>
                             </div>
                         </div>
