--- a/NativeSpark/src/main/resources/templates/my_orders.html
+++ b/NativeSpark/src/main/resources/templates/my_orders.html
@@ -12,26 +12,6 @@
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f9;
         }
-
-        .navbar-custom {
-            background-color: rgba(2, 55, 30, 0.9) !important;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .navbar-brand {
-            font-size: 1.8rem;
-            font-weight: bold;
-            letter-spacing: 1px;
-        }
-
-        .footer-custom {
-            background-color: #014017;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            font-size: 1rem;
-            margin-top: auto;
-        }
     </style>
 </head>
 <body>
@@ -45,13 +25,13 @@
     </div>
 
     <div th:each="order : ${orders}" class="card mb-3">
-        <div th:each="item : ${order.getProducts()}">
+        <div th:each="item : ${order.getTransactionProducts()}">
         <div class="card-body">
-            <h5 class="card-title" th:text="${item.productName}"></h5>
+            <h5 class="card-title" th:text="${item.getProduct().productName}"></h5>
             <p class="card-text"><strong>Quantity:</strong> <span th:text="${item.quantity}"></span></p>
             <p class="card-text"><strong>Total Price:</strong>
                 <span th:text="${#numbers.formatCurrency(item.price * item.quantity)}" />
-            <p class="card-text"><strong>Seller:</strong> <span th:text="${item.getEntrepreneur().getUser().getEmail()}"></span></p>
+            <p class="card-text"><strong>Seller:</strong> <span th:text="${item.getProduct().getEntrepreneur().getUser().getEmail()}"></span></p>
         </div></div>
         <p class="card-text"><strong>Phone Number:</strong> <span th:text="${order.phoneNumber}"></span></p>
         <p class="card-text"><strong>Status:</strong> <span th:text="${order.status}"></span></p>
@@ -62,11 +42,6 @@
     </div>
 </div>
 
-<!-- ✅ Footer -->
-<footer class="footer-custom">
-    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<div th:replace="~{footer}"></div>
 </body>
 </html>
