reccomended_product link fix

--- a/NativeSpark/src/main/resources/templates/product-details.html
+++ b/NativeSpark/src/main/resources/templates/product-details.html
@@ -126,7 +126,7 @@
                     <p class="card-text"
                        th:text="${rec.getRecommendedProduct().category}"></p>
                     <a class="btn btn-primary"
-                       th:href="@{/product-details/{id}(id=${rec.getRecommendedProduct().id})}">View Product</a>
+                       th:href="@{/product-postings/{id}(id=${rec.getRecommendedProduct().id})}">View Product</a>
                 </div>
             </div>
         </div>
